--- a/index.html
+++ b/index.html
@@ -47,29 +47,29 @@
     }
 
     .envelope-back {
-      background-image: url('envelope-1.png');
+      background-image: url('envelope-1.webp');
       z-index: 1;
     }
 
     .envelope-front {
-      background-image: url('envelope-1.png');
+      background-image: url('envelope-1.webp');
       z-index: 5;
     }
 
     .envelope-open-bottom {
-      background-image: url('envelope-4.png');
+      background-image: url('envelope-4.webp');
       z-index: 2;
       opacity: 0;
     }
 
     .envelope-middle {
-      background-image: url('envelope-5.png');
+      background-image: url('envelope-5.webp');
       z-index: 3;
       opacity: 0;
     }
 
     .envelope-open-top {
-      background-image: url('envelope-3.png');
+      background-image: url('envelope-3.webp');
       z-index: 1;
       opacity: 0;
       top: -95%;
@@ -102,7 +102,7 @@
 
     .letter-top {
       top: 0;
-      background-image: url('carta-pt1.png');
+      background-image: url('carta-pt1.webp');
       transform-origin: bottom;
       transform: rotateX(-180deg);
       border-radius: 12px 12px 0 0;
@@ -110,13 +110,13 @@
 
     .letter-middle {
       top: 33.333%;
-      background-image: url('carta-pt2.png');
+      background-image: url('carta-pt2.webp');
     }
 
     .letter-bottom {
       bottom: 0;
       height: 33.333%;
-      background-image: url('carta-pt3.png');
+      background-image: url('carta-pt3.webp');
       transform-origin: top;
       transform: rotateX(180deg);
       border-radius: 0 0 12px 12px;
@@ -129,7 +129,7 @@
       transform: translateX(-50%);
       width: 60%;
       height: auto;
-      background-image: url('./card-nivel1.png');
+      background-image: url('./card-nivel1.webp');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
