--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preload" href="./img/maguinho.webp" as="image" />
     <link rel="preload" href="./img/mago-nivel-3.png" as="image" />
     <link rel="preload" href="./img/mago-1-2.png" as="image" />
+    <link rel="preload" href="./img/asdasd.png" as="image" />
     <style>
       * {
         cursor: none;
@@ -545,6 +546,56 @@
         pointer-events: none; /* Impede cliques quando invisível */
         transform: translateX(-50%) translateY(20px); /* Efeito de surgir de baixo */
       }
+
+      .mago-super {
+        background-image: url("img/asdasd.png");
+        animation: aura-super 1s infinite alternate ease-in-out;
+      }
+
+      @keyframes aura-super {
+        from {
+          filter: drop-shadow(0 0 10px gold) brightness(1.2);
+        }
+        to {
+          filter: drop-shadow(0 0 25px rgb(146, 125, 7)) brightness(1.5)
+            saturate(1.5);
+        }
+      }
+
+      .movimento-super {
+        /* Um movimento mais rápido e com maior alcance que o 'movimento-rapido' */
+        animation: super-movimento 1.8s infinite alternate ease-in-out;
+      }
+
+      @keyframes super-movimento {
+        0% {
+          transform: translate(0, 0) scale(1.1);
+        }
+        10% {
+          transform: translate(30px, -20px) scale(1.1);
+        }
+        20% {
+          transform: translate(-40px, 30px) scale(1.1);
+        }
+        25% {
+          transform: translate(500px, -30px) scale(1.1);
+        }
+        33% {
+          transform: translate(350px, -40px) scale(1.1);
+        }
+        66% {
+          transform: translate(-400px, 50px) scale(1.1);
+        }
+        77% {
+          transform: translate(90px, -60px) scale(1.1);
+        }
+        90% {
+          transform: translate(-100px, 80px) scale(1.1);
+        }
+        100% {
+          transform: translate(0, 0) scale(1.1);
+        }
+      }
     </style>
   </head>
   <body>
@@ -731,6 +782,11 @@
     <audio
       id="som-vitoria"
       src="audio/award-winners.mp3"
+      preload="auto"
+    ></audio>
+    <audio
+      id="maguinho-super-morte"
+      src="audio/Maguinho/goku-e-um-fracassado.mp3"
       preload="auto"
     ></audio>
 
